# Haypile-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASE_MANIFEST.md  SECURITY.md  app_gui.py  backend_host.py  mcp_server.py  one-click-start-haypile.bat  pyproject.toml  pysidedeploy.spec  pysidedeploy.windows.spec  requirements-core.txt  requirements-desktop.txt  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_handoff_issue.yml  bug_report.yml  security_boundary_report.yml
.github/workflows/: ci.yml  macos-build.yml  windows-build.yml
app/: main.py
docs/: AGENT_HTTP_CONTRACT.md  AGENT_RECIPES.md  AI_EVALUATION.md  LOCAL_AI.md  MACOS_INTERNAL_BUILD.md  OPEN_SOURCE_RELEASE.md
examples/: agent_recipes.md  asset-handoff.json  public_smoke_demo.py  use_haypile_http.py  use_haypile_mcp.md
scripts/: build_macos_app.sh  build_windows_app.ps1  evaluate_image_sorting.py
tests/: test_agent_examples.py  test_ai_evaluation.py  test_ai_provider.py  test_alpha2_hardening.py  test_attached_hub.py  test_bundle_service.py  test_config_cors.py  test_gui_real_project_confirmation_actions.py  test_haypile_user_flow.py  test_ipc_config.py  test_json_io_atomic.py  test_local_data_security.py  test_material_summary.py  test_mcp_server.py  test_real_project_binding.py  test_real_project_operations.py  test_storage_runtime_and_vfs.py  test_style_classifier_limits.py  test_theme_contract_schema.py  test_vault_service_security.py
ui_assets/: drop-leaf-frame-runs.txt
(+27 files in other folders)
