[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haypile-lite"
version = "0.3.0a1"
description = "Local-first asset handoff for agent workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "chenjinnan82-stack" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "Pillow>=12.3.0,<13.0.0",
  "mutagen>=1.47.0,<2.0.0",
  "filetype>=1.2.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "tenacity>=8.2.0,<10.0.0",
]

[project.optional-dependencies]
desktop = ["PySide6>=6.8.0,<7.0.0"]
dev = ["PySide6>=6.8.0,<7.0.0"]

[project.urls]
Homepage = "https://github.com/chenjinnan82-stack/Haypile-lite"
Issues = "https://github.com/chenjinnan82-stack/Haypile-lite/issues"

[tool.setuptools.packages.find]
include = ["app*"]
